# netsleuth

./: .gitignore  CLAUDE.md  inventory.example.yaml  main.py  pyproject.toml
.github/workflows/: loopfinder-release.yml
loop_finder/: cli.py  discovery.py  entry.py  graph.py  logparse.py  mock.py  stp.py
network_loop_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
topologies/: complex_loop.yaml  no_loop.yaml  simple_loop.yaml
